# sha256-zeros-search

./: Cargo.toml  LICENSE  README.md
sha256_zero_search_cli/: Cargo.toml  LICENSE  README.md
sha256_zero_search_cli/src/: main.rs  utils.rs
src/: main.rs  utils.rs
