[package]
name = "sha256-zero-search-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"]}
ring = "*"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"